<resources>
    <string name="app_name">Nike</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="latest">Latest</string>
    <string name="view_all">View All</string>
    <string name="comments">Comments</string>
    <string name="insert_comment">insert comment</string>
    <string name="see_all_comments">see all comments</string>
    <string name="add_comment">Add comment</string>
    <string name="product_list">Product List</string>
    <string name="sort">Sort Product</string>
    <string name="sortLatest">Latest</string>
    <string name="sortPopular">Most View</string>
    <string name="sortPriceHighToLow">Most Expensive</string>
    <string name="sortPriceLowToHigh">Most Cheaper</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="added_to_cart">This product added to your cart.</string>
    <string name="enter_to_profile">Login To Your Profile</string>
    <string name="enter">Enter Your Username And Password To Login.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="account">do you have an account?</string>

    <string-array name="sort">
        <item>@string/sortLatest</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="create_account">Enter Username And Password To Create an Account.</string>
    <string name="sign_up">SignUp</string>
    <string name="log_in">LogIn</string>
    <string name="i_have_an_account">I Have An Account.</string>
    <string name="payment">Payment</string>
    <string name="numbers">Numbers</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="details_of_purchase">Details Of Purchase</string>
    <string name="total_price">Total Price</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="payable_price">Payable Price</string>
    <string name="empty_state_message">Please SignIn First.</string>
    <string name="cart_empty_state">Your Cart Is Empty.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="return_to_home">Return To Home</string>
    <string name="order_history">Order History</string>
    <string name="purchase_status">Purchase Status</string>
    <string name="price">Price</string>
    <string name="favorites">Favorites</string>
    <string name="signOut">SignOut</string>
    <string name="favorite_empty_state">There is no product in your favorites</string>
    <string name="favorite_message">For deleting items from favorites just long click it.</string>
</resources>


