<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_nike_logo"
            app:tint="@color/Neutral99"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_to_profile"
            android:textAppearance="@style/TextAppearance.Nike.HeadlineMedium"
            android:textColor="@color/Neutral99"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textColor="@color/Neutral99"
            android:layout_marginTop="12dp"
            android:alpha="0.7"
            android:textAppearance="@style/TextAppearance.Nike.LabelMedium"/>
        <EditText
            android:id="@+id/loginUsernameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:hint="@string/username"
            android:inputType="text"
            style="@style/Theme.Nike.AuthTheme.EditText" />
        <EditText
            android:id="@+id/loginPasswordEt"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="@string/password" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:minHeight="48dp"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:alpha="0.4"
            android:textColor="@color/Neutral99"
            android:textAppearance="@style/TextAppearance.Nike.LabelMedium"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupLinkBtn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>